--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,7 +135,7 @@
                     top: -15px;
                     transition: all 1s;
                 }
-                main section article i.fa-truck:hover{
+                main section article:hover i.fa-truck{
                     transform: rotate(-90deg);
                 }
                 main section article .cajaImporte{
@@ -152,6 +152,10 @@
                     font-size: 16px;
                     color: #39b54a;
                     align-self: flex-end;
+                }
+                main section article:hover .descuento{
+                    font-size: 16px;
+                    font-weight: 700;
                 }
                 main section article .descripcion{
                     display: none;
